TEST_PROGRAMS/VALID/09/inner_scope.go
package main

func main() {
    x := 1

    {
        print(x)
        x := 2
        print(y)
    }

    print(z)
}
