TEST_PROGRAMS/INVALID/08/nestedVarBlock.go
package main;
var(
    x, y int = 1,2;
    var z int;
);
